# kwcorridorkey

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md
cmake/: FetchOpenFX.cmake  FindAdobeSDK.cmake
docs/: davinci-resolve-user-guide.md
native/include/corridorkey/: FrameBufferFile.h  WorkerClient.h
native/src/: FrameBufferFile.cpp  WorkerClient.cpp
native/tests/: WorkerClientTests.cpp
native/tools/: OfxLoadProbe.cpp
plugins/blender/corridorkey_blender/: __init__.py  color_key.py  image_io.py  nodes.py  operators.py  panels.py  prefs.py  properties.py  worker_client.py
plugins/blender/tests/: headless_smoke.py
plugins/premiere/: README.md
plugins/premiere/src/: CorridorKeyPremiere.cpp
plugins/resolve/: README.md
plugins/resolve/src/: CorridorKeyResolve.cpp
plugins/resolve/tests/: natron_scan.py
scripts/: install_corridorkey.py  install_resolve_ofx_bundle.py  package_blender_addon.py  resolve_corridorkey_ref.py
worker/: pyproject.toml
worker/src/corridorkey_worker/: __init__.py  buffers.py  engine.py  protocol.py  server.py  settings.py
worker/tests/: run_smoke.py  test_buffers.py  test_fake_engine.py  test_protocol.py  test_server_fake.py  test_settings.py
