[project]
name = "corridorkey-worker"
version = "0.1.0"
description = "Worker bridge for native CorridorKey host plugins"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
corridorkey-worker = "corridorkey_worker.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corridorkey_worker"]

